--- a/public/components/docs/toc.html
+++ b/public/components/docs/toc.html
@@ -3,14 +3,14 @@
     <h1>Ease v0.0.10</h1>
   </div>
   <ul>
-    <li><a href="#index.html">Welcome</a></li>
-    <li><a href="#getting-started.html">Getting Started</a></li>
+    <li><nav-to href="?path=index">Welcome</nav-to></li>
+    <li><nav-to href="?path=getting-started">Getting Started</nav-to></li>
     <li>
-      <a href="#extensions.html">Extensions</a>
+      <nav-to href="?path=extensions">Extensions</nav-to>
       <ul>
-        <li><a href="#extensions/reactive.html">Reactive</a></li>
-        <li><a href="#extensions/reactive-dom.html">Reactive DOM</a></li>
-        <li><a href="#extensions/router.html">Router</a></li>
+        <li><nav-to href="?path=extensions/reactive">Reactive</nav-to></li>
+        <li><nav-to href="?path=extensions/reactive-dom">Reactive DOM</nav-to></li>
+        <li><nav-to href="?path=extensions/router">Router</nav-to></li>
       </ul>
     </li>
   </ul>
