fix getting started button and hero button

--- a/public/components/header.html
+++ b/public/components/header.html
@@ -20,7 +20,7 @@
     });
     
     el.docs.addEventListener?.('click', () => {
-      $.router.push('docs.html#index.html')
+      $.router.push('docs.html?path=getting-started')
     });
 
     el.logo.addEventListener?.('click', () => {
