--- a/public/components/home/details.html
+++ b/public/components/home/details.html
@@ -7,9 +7,7 @@
 </template>
 
 <script>
-  export default function ({ root, el, attrs }) {
-    console.error('!', this.color);
-  }
+  export default function ({ root, el, attrs }) {}
 </script>
 
 <style>
