--- a/public/components/home/hero.html
+++ b/public/components/home/hero.html
@@ -32,7 +32,7 @@
   font-weight: 400;
   color: #fff;
   padding: 3rem 1rem;
-  animation: rotate 120s linear infinite;
+  /* animation: rotate 120s linear infinite; */
   background: linear-gradient(var(--degrees), #44112200, #11334499), 
               linear-gradient(calc(-13 * var(--degrees)), #ff00ff88, #3c0d9388),
               linear-gradient(calc(-10 * var(--degrees)), #11ff00, #000000);
