--- a/public/components/home/details.html
+++ b/public/components/home/details.html
@@ -1,4 +1,6 @@
-<property name="color" default="#333" expose-to-styles attribute />
+<property name="color" default="#eee" expose-to-styles attribute />
+<property name="color-dark" default="#333" expose-to-styles attribute />
+<property name="dark" default="false" expose-to-styles attribute />
 
 <template>
   <div>
@@ -18,8 +20,11 @@
     padding: 32px 32px;
     text-align: center;
     background-color: var(--color, #777);
-    background-image: linear-gradient(2deg,  #FFFFFF22,  #00000022);
+    color: #000;
+    font-family: var(--sans-serif);
+  }
+
+  :host([dark]) {
     color: #FFF;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 </style>
