--- a/public/components/home/details.html
+++ b/public/components/home/details.html
@@ -19,12 +19,30 @@
     gap: 20px;
     padding: 32px 32px;
     text-align: center;
-    background-color: var(--color, #777);
+    background-color: var(--color, --paper-1);
     color: #000;
     font-family: var(--sans-serif);
   }
 
   :host([dark]) {
     color: #FFF;
+  }
+
+  ::slotted(h1) {
+    color: #222;
+    font-size: 1.2em;
+    font-family: var(--sans-serif);
+    line-height: 1.8em;
+    font-weight: 600;
+    margin-bottom: 0;
+  }
+
+  ::slotted(p) {
+    color: #222;
+    font-size: 1em;
+    font-family: var(--sans-serif);
+    line-height: 1.6em;
+    font-weight: 400;
+    margin: 0;
   }
 </style>
