--- a/public/styles.css
+++ b/public/styles.css
@@ -19,20 +19,132 @@
   --sans-serif: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   --serif: 'Georgia', 'Times New Roman', Times, serif;
   --monospace: 'Courier New', Courier, monospace;
+
+  --code-text: var(--black);
+  --code-tagstart: rgb(144, 32, 139);
+  --code-attr: rgb(32, 144, 139);
+  --code-attrval: rgb(86, 80, 28);
 }
 
 body, html {
   padding: 0;
   margin: 0;
-  background-color: black;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  opacity: 1;
 }
 
 body:not(.hydrated) {
-  opacity: 0;
+  & ns-details, 
+  & ns-footer, 
+  & ns-button,
+  & ns-demo {
+    display: none;
+  }
+}
+
+/* Prevent FOUC from being too noticable on Safari */
+body:not(:-webkit-full-screen-ancestor):not(.hydrated) {
+  & ns-header {
+    height: 58px;
+    background: linear-gradient(20deg, #404, #002 );
+  }
+  & ns-button {
+    display: inline-block;
+    --border-radius: 3rem;
+    margin: 8px 0;
+    filter: contrast(1.2);
+    border-radius: var(--border-radius);
+    border: 1px solid #eee;
+    padding: 16px 32px;
+    font-size: 1.2rem;
+    background-color: var(--color, #fff);
+    position: relative;
+    transition: all 0.3s;
+  }
+}
+
+/* Hero */
+div#hero {
+  --degrees: 5deg;
+  text-align: center;
+  font-family: var(--monospace);
+  font-size: 1.8em;
+  font-weight: 400;
+  color: #000;
+  padding: 3rem 1rem;
+  background-color: rgb(248, 245, 238);
+  border-bottom: 1px solid #cac3ba;
+
+  & .rainbow-text {
+    background-image: linear-gradient(45deg, #cb1753, #1c3d83);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-weight: 500;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #111;
+    color: #fff;
+  }
+
+  body:not(.hydrated) {
+    & ns-header {
+      background: linear-gradient(20deg, #404, #002 );
+    }
+  }
+
+  div#hero {
+    background-color: #222;
+    border-bottom: 1px solid #333;
+  }
+}
+
+code {
+  display: inline-block;
+  text-align: left;
+  color: #000;
+  font-size: 0.8rem;
+  font-family: var(--monospace);
+  background-color: #FFF;
+  padding: 16px;
+  border-radius: 4px;
+  margin: 8px 0;
+  min-width: 600px;
+  max-width: 80vw;
+
+  & span.tagstart {
+    &::before { content: '<'; color: var(--code-text) }
+    color: var(--code-tagstart);
+    &.v-no-attrs {
+      &::after { content: '>'; color: var(--code-text) }
+    }
+  }
+
+  & span.tagend {
+    &::before { content: '</'; color: var(--code-text) }
+    &::after { content: '>'; color: var(--code-text) }
+    color: var(--code-tagstart);
+    &.v-no-content {
+      &::before { content: '></'; color: var(--code-text) }  
+    }
+    &.v-self-closing {
+      &::before { content: '/'; color: var(--code-text) }  
+    }
+  }
+
+  & span.tagattr {
+    color: var(--code-attr);
+  }
+
+  & span.tagattrval {
+    color: var(--code-attrval);
+    &::before { content: '="'; color: var(--code-text) };
+    &::after { content: '"'; color: var(--code-text) };
+  }
 }
