--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -1,16 +1,18 @@
 <template>
   <footer>
-    Ease &copy; 2024 James Landrum, All Rights Reserved
+    Ease © 2024 James Landrum, All Rights Reserved
   </footer>
 </template>
 
 <style>
   :host {
     background-color: var(--color-1, #222);
-    color: var(--white, #fff);
     padding: 8px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 0.8em;
-    text-align: center;
+    & footer {
+      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      font-size: 0.8em;
+      text-align: center;
+      color: #eee;
+    }
   }
 </style>
