--- a/public/components/colorbox.html
+++ b/public/components/colorbox.html
@@ -22,6 +22,7 @@
     background-color: var(--color, --paper-1);
     color: var(--black);
     font-family: var(--sans-serif);
+    max-width: 100%;
   }
 
   div {
