fixes for safari desktop

--- a/public/components/docs/details.html
+++ b/public/components/docs/details.html
@@ -51,12 +51,12 @@
     padding: 20px;
     max-width: min(800px, 100%);
     margin: 0 auto;
-    color: var(--foreground);
     overflow-x: auto;
     min-height: 100vh;
   }
   
   #content {
+    color: var(--black);
     opacity: 0;
     &.loaded {
       opacity: 1;
