--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -8,11 +8,11 @@
   :host {
     background-color: var(--color-1, #222);
     padding: 8px;
-    & footer {
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      font-size: 0.8em;
-      text-align: center;
-      color: #eee;
-    }
+  }
+  footer {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 0.8em;
+    text-align: center;
+    color: #eee;
   }
 </style>
