--- a/public/components/docs/host.html
+++ b/public/components/docs/host.html
@@ -17,23 +17,23 @@
   display: flex;
   flex-direction: row;
 
-  --background: #ffF;
-  --background2: #eee;
-  --foreground: #333;
-  --foreground2: #33a;
+  --background: var(--white);
+  --background2: var(--paper-1);
+  --foreground: var(--black);
+  --foreground2: var(--color-2);
 
   background-color: var(--background);
-
-  @media (prefers-color-scheme: dark) {
-    --background: #222;
-    --background2: #444;
-    --foreground: #eee;
-    --foreground2: #aaf;
-  }
 
   & :first-child {
     flex-basis: 20%;
     min-width: 300px;
+  }
+
+}
+
+@media (prefers-color-scheme: dark) {
+  :host {
+    --foreground2: color-mix(in hsl, var(--color-1) 40%, #FFF);
   }
 }
 
