--- a/public/components/code.html
+++ b/public/components/code.html
@@ -14,8 +14,15 @@
 </script>
 
 <style>
+  :host {
+    max-width: calc(100vw - 64px);
+    display: block;
+    overflow-x: auto;
+  }
+
   code {
     --code-text: var(--black);
+    border-radius: 4px;
     display: inline-block;
     text-align: left;
     font-size: 0.8rem;
@@ -23,12 +30,8 @@
     background-color: var(--white);
     color: var(--black);
     padding: 16px;
-    border-radius: 4px;
     margin: 8px 0;
-    min-width: 600px;
-    max-width: 80vw;
     
-
     & span.tagstart {
       &::before { content: '<'; color: var(--code-text) }
       color: var(--code-tagstart);
